--- a/app/views/logeado.erb
+++ b/app/views/logeado.erb
@@ -8,7 +8,8 @@
   <% end %>
   <br>
   <hr>
-  <br>
+  <a href="/surveys">Encuestas a contestar</a>
+  <hr>
   <a href="/new_survey">Crear encuesta</a>
   <hr>
   <a href="/update">Editar perfil</a>
