Coments in controllers

--- a/app/views/edit_survey.erb
+++ b/app/views/edit_survey.erb
@@ -12,7 +12,9 @@
   <% end %>
 <% else %>
 <% end %>
-
+<script type="text/javascript">
+  //Falta agregar las graficas
+</script>
 <p>Formato para agregar preguntas a la encuesta</p>
 <form action="/new_question/question/<%= @survey.id %>" method="post">
   <label>Titulo Pregunta</label>
